# turnip

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.frozen  requirements.test
src/turnip/: __init__.py  errors.py  models.py  program.py  scope.py  storage.py  types.py
src/turnip/clients/: openai_client.py
tests/: test_cache.py  test_experiments.py  test_openai_client.py  test_processor.py  test_program_store.py
turnip/: __init__.py  processor.py  runner.py  storage.py
turnip/providers/: __init__.py  base.py  openai.py  together.py  vllm.py
