[tool.poetry]
name = "turnip"
version = "0.1.0"
description = "Async experiment runtime for define-by-run agent workflows"
authors = ["Turnip Developers"]
readme = "README.md"
packages = [{ include = "turnip", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
openai = "*"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
